iptables/iptables
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Apr 19 10:51:19 2024
*filter
:INPUT DROP [2176:519877]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [747:59372]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -d 212.77.98.9 -j ACCEPT
COMMIT
# Completed on Fri Apr 19 10:51:19 2024
